<resources>
    <string name="app_name">Attendance logger</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="login_prompt">"Enter login"</string>
    <string name="password_prompt">"Enter password"</string>
    <string name="action_mark_me">Mark me as attended!</string>

    <string name="start_gathering">Start gathering attendance</string>
    <string name="mark_student_manually">Mark student by hand</string>

    <string name="prompt_class_id">Class id</string>
    <string name="prompt_activity_id">Activity id</string>
    <string name="prompt_user_id">User id</string>
    <string name="prompt_week">Week Number</string>

    <string name="prompt_class_select">Select Class</string>
    <string name="prompt_activity_select">Select Activity</string>
    <string name="prompt_user_select">Select User</string>

    <string name="waiting_sign">Please wait… We retrieving some data</string>


    <string name="try_mark_my_attendance">Try mark me on this activity</string>
    <string name="start_gathering_attendance_of_this_activity">Start Gathering Attendance On this activity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
