<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".BluetoothMarkingFragment"
    android:paddingHorizontal="40dp"
    android:id="@+id/bluetooth_marking_layout">

    <Button
        android:id="@+id/btnONOFF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="ON/OFF Bluetooth" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnFindUnpairedDevices"
        android:text="Discover"
        android:onClick="btnDiscover"/>

    <ListView
        android:layout_below="@id/btnFindUnpairedDevices"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:id="@+id/lvNewDevices"/>

    <EditText
        android:id="@+id/class_id_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_class_id"
        android:inputType="numberDecimal"/>

    <EditText
        android:id="@+id/activity_id_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_activity_id"
        android:inputType="numberDecimal"/>

    <EditText
        android:id="@+id/week_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_week"
        android:inputType="numberDecimal"/>

    <Button
        android:id="@+id/try_marking_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/try_mark_my_attendance"
        android:inputType="numberDecimal"/>


</LinearLayout>