<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ManualMarkingFragment"
    android:id="@+id/professor_manual_layout">
    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        style="@android:style/Widget.Material.ProgressBar.Horizontal"
        android:indeterminate="true"
        android:indeterminateTint="@color/colorPrimaryDark"
        android:layout_marginTop="-7dp"
        android:visibility="invisible"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="40dp"
        android:orientation="vertical"
        android:gravity="center">

    <com.example.attendancelogger.ui_components.PromptSpinner
        android:id="@+id/class_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/prompt_class_select"/>

    <com.example.attendancelogger.ui_components.PromptSpinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/user_spinner"
        android:visibility="gone"/>

    <EditText
        android:id="@+id/activity_id_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_activity_id"
        android:inputType="numberDecimal"
        android:visibility="gone"/>

    <EditText
        android:id="@+id/week_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_week"
        android:inputType="numberDecimal"
        android:visibility="gone"/>

    <Button
        android:id="@+id/confirm_marking_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mark_student_manually"
        android:visibility="gone"/>
    </LinearLayout>

</LinearLayout>